# api.jelomu.local

./: .gitignore  CONTRIBUTOR.md  Cargo.toml  README.md  Rocket.toml  ca.cert.conf  server.cert.conf
.github/workflows/: rust-clippy.yml
ansible/: playbook-podman-infrastructure.yml  requirements.yml
benches/: bench_lib_about.rs  bench_test_for_teapot.rs
src/: about.rs  main.rs
tests/: test_for_teapot.rs
