[package]
name = "webapi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "webapi-daemon"
path = "src/main.rs"
doc = false

[dev-dependencies]
tokio = "1.43.*"
serde_json = "1.0.*"
criterion = "0.5.*"

[[bench]]
name = "bench_lib_about"
harness = false

[dependencies]
futures = { version = "0.3.31", features = ["alloc", "async-await", "executor", "std", "futures-executor"] }
rocket = { version = "0.5.1", features = ["http2", "json", "msgpack", "secrets", "tls", "uuid"] }
rocket-include-static-resources = "0.10.5"
serde = { version = "1.0.217", features = ["alloc", "derive", "rc"] }
serde_json = { version = "1.0.138", features = ["alloc", "indexmap", "preserve_order", "raw_value"] }
